# customer_service_eval

./: init.sh  pyproject.toml  set_env.sh
customer_service_agent/: agent.py  cloudbuild.yaml  eval.test.json  eval_colab.py  evalset780045.evalset.json  main.py  pyproject.toml  requirements.txt  test_config.json
customer_service_agent/.adk/eval_history/: customer_service_agent_customer_service_eval_1764106591.182118.evalset_result.json  customer_service_agent_customer_service_eval_1764106591.1835608.evalset_result.json  customer_service_agent_customer_service_eval_1764106591.184339.evalset_result.json  customer_service_agent_evalset780045_1764106270.390929.evalset_result.json
customer_service_agent/agent_package/: __init__.py  agent.py
customer_service_agent/tests/: deploy_and_eval.py  golden_dataset.json
